assets/css/components/modal.css
dialog.mbta-modal {
  background-color: var(--colors-background-primary);
  border: var(--border-width-xs) solid var(--colors-charcoal-70);
  box-shadow: 0 7px 14px 0
    color-mix(in srgb, var(--colors-charcoal-10), transparent 80%);
  color: var(--colors-text-primary);
  padding: var(--spacing-lg);
  max-height: 100dvh;
  max-width: 65ch; /* "two and a half alphabets" */
  overflow: scroll;
  z-index: 1000;

  form[method="dialog"] {
    background-color: var(--colors-cobalt-90);
    margin-top: calc(var(--spacing-lg) * -1);
    margin-inline: calc(var(--spacing-lg) * -1);
    margin-bottom: var(--spacing-lg);
    padding-block: var(--spacing-default);
    padding-inline: var(--spacing-lg);
    text-align: right;
  }
}

/*
 * After we hit the max-width: 65ch above, the modal will be smaller than the
 * window width. Reduce the max possible height to 95% of the device height to
 * help show the content behind the modal.
 */
@media (min-width: 65ch) {
  dialog.mbta-modal {
    max-height: 95dvh;
  }
}

